refactor: file processor and show project